added text for the news cards

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="site-header">
       <div class="logo-wrapper">
-        <img class="circle-logo" src="https://cdn.discordapp.com/attachments/1023954749499899956/1136939590310170684/icons8-circle-100.png" alt="logo news site">
+        <img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136939590310170684/icons8-circle-100.png" alt="logo news site">
         <h1>The Cozy Nook</h1>
       </div>
       
@@ -36,10 +36,10 @@
         </div>
         <div big-news-links>
           <div>
-            <a href="link">Heading for big news</a>
+            <h1><a href="link">The Feline Fuzzball Effect: How Cats Enhance Our Well-Being</a></h1>
           </div>
           <div>
-              <a href="link">Text for big news</a>
+              <h3><a href="link">In the hustle and bustle of our modern lives, there's one adorable companion that has quietly weaved its way into our hearts, bringing a delightful impact on our overall well-being - cats. Beyond their cute and curious demeanor, these furry friends offer a range of mental, emotional, and physical benefits that contribute to a healthier and happier life.</a></h3>
           </div>
         </div>
       </article>
@@ -50,8 +50,8 @@
           <a href="link" class="card">
           <div class="picture"><img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136392551688060988/placeholder_picture.jpg"></div>
             <article>
-              <h1>Created by You, July Edition</h1>
-              <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+              <h1>Enchanted Worlds: How Ghibli Movies Ignite the Flame of Imagination</h1>
+              <p>Ghibli movies are not just animated tales; they are gateways to worlds of inspiration and wonder. Their timeless stories and beautifully crafted animations inspire us to dream big, cherish our connections, and embrace the magic of life.</p>
             </article>
           </a>
         </div>
@@ -59,8 +59,8 @@
           <a href="link" class="card">
           <div class="picture"><img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136392551688060988/placeholder_picture.jpg"></div>
             <article>
-              <h1>Created by You, July Edition</h1>
-              <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+              <h1>Rainy Retreat: Enjoyable Indoor Activities to Brighten Your Day</h1>
+              <p>When raindrops tap on the windowpanes, it's a perfect opportunity to embrace the cozy ambiance indoors. So, grab a cup of hot cocoa, cozy up, and explore these indoor adventures that will make the rain feel like a blessing.</p>
             </article>
           </a>
         </div>
@@ -68,8 +68,8 @@
           <a href="link" class="card">
           <div class="picture"><img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136392551688060988/placeholder_picture.jpg"></div>
             <article>
-              <h1>Created by You, July Edition</h1>
-              <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+              <h1>Bubble Tea Alchemy: 5  Bubble Tea Creations to Try Today</h1>
+              <p>Ready to take your bubble tea journey to new heights? We've got just the ticket! Step aside from the usual bubble tea blends, and let's dive into a world of creativity with these five recipes that will redefine your sipping experience.</p>
             </article>
           </a>
         </div>
@@ -77,8 +77,8 @@
           <a href="link" class="card">
           <div class="picture"><img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136392551688060988/placeholder_picture.jpg"></div>
             <article>
-              <h1>Created by You, July Edition</h1>
-              <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+              <h1>Digital Escapes: 5 Video Games to Unwind and Recharge</h1>
+              <p>Embark on adventures through these five video games. Explore picturesque landscapes, solve gentle puzzles, and immerse yourself in stories that touch the heart. </p>
             </article>
           </a>
         </div>
@@ -86,8 +86,8 @@
           <a href="link" class="card">
           <div class="picture"><img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136392551688060988/placeholder_picture.jpg"></div>
             <article>
-              <h1>Heading</h1>
-              <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+              <h1>Yoga: A Holistic Path to Enhance Well-Being</h1>
+              <p>In the quest for a balanced and healthy life, yoga stands as a timeless practice that offers numerous benefits for mind, body, and soul. Let us delve into the world of yoga and explore the ways in which this ancient discipline can elevate your overall health and quality of life.</p>
             </article>
           </a>
         </div>
