--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,9 @@
   <header>
     <!-- Some kind of logo and navbar -->
     <h1>Elba</h1>
-    Elba
+    Elba prøver igjen
+    funker ikke live
+
   </header>
 
   <section class="big-news">
