add some responsive

--- a/code/index.html
+++ b/code/index.html
@@ -43,10 +43,9 @@
   </header>
 
   <!-- Section big news also header -->
+  <main>
   <section class="big-news">
-    <div class="highlights-photo">
       <img class=" highlights-dish" src="img/highlights-dish.jpeg" alt="News">
-    </div>
     <div class="highlights-news">
       <h3 class="">SUMMER'S NEW FAVE SALAD.</h3>
       <a href="https://www.delish.com/cooking/recipe-ideas/a43331235/blueberry-peach-feta-salad-recipe/"
@@ -145,7 +144,7 @@
       </a>
     </article>
   </section>
-
+</main>
   <!-- Footer, contact -->
   <footer>
     <div class="copyright">
