updated logo link

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <header>
     <!-- Some kind of logo and navbar -->
     <nav>
-      <img src="../code/logo.svg" />
+      <img src="logo.svg" />
       <a href="#link_to_travel">Travel</a>
       <a href="#link_to_Museums">Museums</a>
       <a href="#link_to_Pools">Pools</a>
