adjusted the grid and completed the mobile version

--- a/code/index.html
+++ b/code/index.html
@@ -9,33 +9,34 @@
     <!-- Change the title below -->
     <title>The Cozy Nook</title>
     <link rel="stylesheet" href="./style.css" />
-    
   </head>
+
   <body>
-    <header class="site-header">
-      <div class="logo-wrapper">
+    <header class="header-website">
+      <div class="header-logo-wrapper">
         <img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136939590310170684/icons8-circle-100.png" alt="logo news site">
         <h1>The Cozy Nook</h1>
       </div>
       
-      <div class="nav-wrapper">
-        <img class="triple-bars" src="https://cdn.discordapp.com/attachments/797594258286051338/1136698868164198430/three-horizontal-lines-icon.png" alt="triple bars">
-        <ul class="nav-list">  
-          <li><a class="nav-link home" href="link1">Home</a></li>
-          <li><a class="nav-link about-us" href="link1">About us</a></li>
-          <li><a class="nav-link contact-us" href="link1">Contact us</a></li>
+      <div class="header-nav-wrapper">
+        <img class="header-hamburger" src="https://cdn.discordapp.com/attachments/797594258286051338/1136698868164198430/three-horizontal-lines-icon.png" alt="triple bars">
+        <ul class="header-nav-list">  
+          <li><a class="header-nav-link home" href="link1">Home</a></li>
+          <li><a class="header-nav-link about-us" href="link1">About us</a></li>
+          <li><a class="header-nav-link contact-us" href="link1">Contact us</a></li>
         </ul>
       </div>
     </header>
 
     <main>
-      <!-- <div class="cards">
-        <div class="card-body first-news">
-          <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg">
-          <h2 class="card-title">The Feline Fuzzball Effect: How Cats Enhance Our Well-Being</h2>
-          <p class="card-description">In the hustle and bustle of our modern lives, there's one adorable companion that has quietly weaved its way into our hearts, bringing a delightful impact on our overall well-being - cats. Beyond their cute and curious demeanor, these furry friends offer a range of mental, emotional, and physical benefits that contribute to a healthier and happier life.</p>
-        </div> -->
-
+      <div class="card">
+        <a href="link" class="card-link">
+          <div class="card-body first-news">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg">
+            <h2 class="card-title">The Feline Fuzzball Effect: How Cats Enhance Our Well-Being</h2>
+            <p class="card-description">In the hustle and bustle of our modern lives, there's one adorable companion that has quietly weaved its way into our hearts, bringing a delightful impact on our overall well-being – cats. Beyond their cute and curious demeanor, these furry friends offer a range of mental, emotional, and physical benefits that contribute to a healthier and happier life.</p>
+          </div>
+        </a>
       <div class="card">
         <a href="link" class="card-link">
           <div class="card-body second-news">
@@ -78,9 +79,7 @@
     </div>
   </main>
   <footer>
-    <div>
-      <p>Created by Veronica Åström</p>
-    </div>
+    <p>Created by Veronica Åström 2023</p>
   </footer>
   </body>
 </html>
