New slate to remove redundant code

--- a/code/index.html
+++ b/code/index.html
@@ -19,25 +19,39 @@
     <section class="">
       <!-- The other news  -->
     </section>
-
-    <h1>The New Amsterdam Times</h1>
-    <h2>Out of print since 1664</h2>
-    <p class="box-one">
+    <div>
+      <h1>The New Amsterdam Times</h1>
+      <h2>Out of print since 1664</h2>
+    </div>
+      <p class="box-one" >
         Top story
-    </p>
-    <p class="box-two">
+      </p>
+    
+      <p class="box-two">
         Not so top story
-    </p>
+      </p>
 
     <section class="flex-parent">
 
+    <div class="flex-child yellow">
+      <img src="./images news/newspaper blue door.jpg" alt="blue door and newspaper" 
+      width="150px" height="150px">
+      <button>Click here</button>
+      
+    </div>
+    <div class="flex-child green">
+      <img src="./images news/newspaper blue door.jpg" alt="blue door and newspaper" 
+      width="200px" height="200px">
+    </div>
+    <div class="flex-child blue">
+      <img src="./images news/newspaper blue door.jpg" alt="blue door and newspaper" 
+      width="200px" height="200px">
+    </div>
+    <div class="flex-child brown">
+      <img src="./images news/newspaper blue door.jpg" alt="blue door and newspaper" 
+      width="200px" height="200px">
+    </div>
     <div class="flex-child yellow"></div>
-    <div class="flex-child green"></div>
-    <div class="flex-child blue"></div>
-    <div class="flex-child brown"></div>
-    <div class="flex-child yellow"></div>
-    <div class="flex-child green"></div>
-    <div class="flex-child blue"></div>
-    <div class="flex-child brown"></div>
+
   </body>
 </html>
