--- a/code/index.html
+++ b/code/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Cooking</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,12 +9,10 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Poppins:wght@100;200&display=swap"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/3317e7b26d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
-
   <!-- Menu -->
   <header class="header">
     <nav class="navbar">
@@ -44,107 +41,105 @@
 
   <!-- Section big news also header -->
   <main>
-  <section class="big-news">
+    <section class="big-news">
       <img class=" highlights-dish" src="img/highlights-dish.jpeg" alt="News">
-    <div class="highlights-news">
-      <h3 class="">SUMMER'S NEW FAVE SALAD.</h3>
-      <a href="https://www.delish.com/cooking/recipe-ideas/a43331235/blueberry-peach-feta-salad-recipe/"
-        target="_blank">
-        <h1 class="highlights-name">Blueberry Peach Feta Salad.</h1>
-      </a>
-      <p class="highlights-paragraph">Blueberries, peaches, cucumbers, AND feta? You'll be amazed by how well this
-        combination comes together in salad form. This might become the most vibrant, elegant salad you'll bring to a
-        picnic in the park or a summer BBQ dinner..</p>
-    </div>
-  </section>
+      <div class="highlights-news">
+        <h3 class="">SUMMER'S NEW FAVE SALAD.</h3>
+        <a href="https://www.delish.com/cooking/recipe-ideas/a43331235/blueberry-peach-feta-salad-recipe/"
+          target="_blank">
+          <h1 class="highlights-name">Blueberry Peach Feta Salad.</h1>
+        </a>
+        <p class="highlights-paragraph">Blueberries, peaches, cucumbers, AND feta? You'll be amazed by how well this
+          combination comes together in salad form. This might become the most vibrant, elegant salad you'll bring to a
+          picnic in the park or a summer BBQ dinner.</p>
+      </div>
+    </section>
 
-  <!-- Section other news with grid -->
-  <section class="animation-header">
+    <!-- Section other news with grid -->
     <section class="animation-header">
       <h4>
         More recipes
       </h4>
     </section>
+    <section class="other-news">
 
-  </section>
+      <!-- The other news  -->
 
-  <section class="other-news">
-    <!-- The other news  -->
-    <article class=" random-news">
-      <img src="img/pasta.jpeg">
-      <a href="https://www.delish.com/cooking/recipe-ideas/a44361345/spicy-cottage-cheese-pasta-recipe/"
-        target="_blank">
-        <p class="other-paragraph"> Spicy Cottage Cheese Pasta</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/hummus.jpeg">
-      <a href="https://www.delish.com/cooking/recipe-ideas/a43854375/hummus-recipe/" target="_blank">
-        <p class="other-paragraph">Homemade hummus</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/pizza.jpeg">
-      <a href="https://italienskpizza.se/napolitansk-pizzadeg/" target="_blank">
-        <p class="other-paragraph">Neapolitan Pizza</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/salad.jpeg">
-      <a href="https://www.delish.com/cooking/recipe-ideas/a39564289/classic-nicoise-salad-recipe/" target="_blank">
-        <p class="other-paragraph">Salad</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/roti.jpeg">
-      <a href="https://www.cookwithmanali.com/roti-recipe/" target="_blank">
-        <p class="other-paragraph">Indian Roti</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/dumplings.jpeg">
-      <a href="https://aniagotuje.pl/przepis/pierogi-ruskie" target="_blank">
-        <p class="other-paragraph">Dumplings</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/focaccia.jpeg">
-      <a href=" https://www.koket.se/leila-bakar/leila-lindholm/enkel-focaccia-leilas-recept" target="_blank">
-        <p class="other-paragraph">Focaccia</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/salmon.jpeg">
-      <a href=" https://www.56kilo.se/lax-i-ugn-med-kramig-citron-och-ostsas/" target="_blank">
-        <p class="other-paragraph">Salmon in cream</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/pad-thai.jpeg">
-      <a href=" https://www.ica.se/recept/pad-thai-720986/" target="_blank">
-        <p class="other-paragraph">Pad thai</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/grilled trout.jpeg">
-      <a href="https://www.allrecipes.com/recipe/228043/whole-grilled-trout/" target="_blank">
-        <p class="other-paragraph">Grilled trout</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/polish-noodels.jpeg">
-      <a href="https://aniagotuje.pl/przepis/kluski-z-miesem" target="_blank">
-        <p class="other-paragraph">Polish noodels</p>
-      </a>
-    </article>
-    <article class=" random-news">
-      <img src="img/taco.jpeg">
-      <a href="https://www.ica.se/recept/tacos-722416/" target="_blank"></a>
-      <p class="other-paragraph">Tacos</p>
-      </a>
-    </article>
-  </section>
-</main>
+      <article class=" random-news">
+        <img src="img/pasta.jpeg" alt="Spicy Cottage Cheese Pasta">
+        <a href="https://www.delish.com/cooking/recipe-ideas/a44361345/spicy-cottage-cheese-pasta-recipe/"
+          target="_blank">
+          <h5 class="other-heading"> Spicy Cottage Cheese Pasta</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/hummus.jpeg" alt="Homemade hummus">
+        <a href="https://www.delish.com/cooking/recipe-ideas/a43854375/hummus-recipe/" target="_blank">
+          <h5 class="other-heading">Homemade hummus</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/pizza.jpeg" alt="Neapolitan Pizza">
+        <a href="https://italienskpizza.se/napolitansk-pizzadeg/" target="_blank">
+          <h5 class="other-heading">Neapolitan Pizza</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/salad.jpeg" alt="Salad">
+        <a href="https://www.delish.com/cooking/recipe-ideas/a39564289/classic-nicoise-salad-recipe/" target="_blank">
+          <h5 class="other-heading">Salad</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/roti.jpeg" alt="Indian Roti">
+        <a href="https://www.cookwithmanali.com/roti-recipe/" target="_blank">
+          <h5 class="other-heading">Indian Roti</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/dumplings.jpeg" alt="Dumplings">
+        <a href="https://aniagotuje.pl/przepis/pierogi-ruskie" target="_blank">
+          <h5 class="other-heading">Dumplings</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/focaccia.jpeg" alt="Focaccia">
+        <a href=" https://www.koket.se/leila-bakar/leila-lindholm/enkel-focaccia-leilas-recept" target="_blank">
+          <h5 class="other-heading">Focaccia</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/salmon.jpeg" alt="Salmon in cream">
+        <a href=" https://www.56kilo.se/lax-i-ugn-med-kramig-citron-och-ostsas/" target="_blank">
+          <h5 class="other-heading">Salmon in cream</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/pad-thai.jpeg" alt="Pad thai">
+        <a href=" https://www.ica.se/recept/pad-thai-720986/" target="_blank">
+          <h5 class="other-heading">Pad thai</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/grilled-trout.jpeg" alt="Grilled trout">
+        <a href="https://www.allrecipes.com/recipe/228043/whole-grilled-trout/" target="_blank">
+          <h5 class="other-heading">Grilled trout</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/polish-noodels.jpeg" alt="Polish noodels">
+        <a href="https://aniagotuje.pl/przepis/kluski-z-miesem" target="_blank">
+          <h5 class="other-heading">Polish noodels</h5>
+        </a>
+      </article>
+      <article class=" random-news">
+        <img src="img/taco.jpeg" alt="Tacos">
+        <a href="https://www.ica.se/recept/tacos-722416/" target="_blank">
+          <h5 class="other-heading">Tacos</h5>
+        </a>
+      </article>
+    </section>
+  </main>
   <!-- Footer, contact -->
   <footer>
     <div class="copyright">
@@ -164,5 +159,4 @@
     </div>
   </footer>
 </body>
-
 </html>
