--- a/code/index.html
+++ b/code/index.html
@@ -10,17 +10,30 @@
 </head>
 
 <body>
-  <header>
-    <!-- Some kind of logo and navbar -->
-  </header>
-
-  <section class="big-news">
-    <!-- The big news content -->
-  </section>
-
-  <section class="">
-    <!-- The other news  -->
-  </section>
+  <div>
+    <header>
+      <!-- Some kind of logo and navbar -->
+    </header>
+  </div>
+  <div>
+    <h1>News Article</h1>
+    <h2>What article is about</h2>
+  </div>
+  <div>
+    <section class="big-news">
+      <!-- The big news content -->
+      <p>All the text about the news <a href="https://google.com">here</a></p>
+      <img src="./Image1.png" alt="Picture of logo">
+      <p>More text about the news</p>
+      <a href="https://google.com">Read more here</a>
+    </section>
+  </div>
+  <div>
+    <section class="">
+      <!-- The other news  -->
+      <p>More information</p>
+    </section>
+  </div>
 </body>
 
 </html>
