Adding elements and finalizing look

--- a/code/index.html
+++ b/code/index.html
@@ -28,8 +28,7 @@
   <a href="#">
     <p class="stora-nyheten-headline">
     Tomorrow We're the New YORK Times</p>
-    <p>The Times are a-changing people!</p>
-
+    <p class="stora-nyheten-ingress">The Times are indeed changing!</p>
   </a>
   
  </section>
