--- a/code/index.html
+++ b/code/index.html
@@ -4,12 +4,26 @@
 <head>
   <meta charset="utf-8" />
   <!-- Change the title below -->
-  <title>News Site</title>
+  <title>Best news</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
+  <div>
+    <section class="grid-parent">
+      <div class="big-grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="lonely-grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+      <div class="grid-item">☀️</div>
+    </section>
+  </div>
   <div>
     <header>
       <!-- Some kind of logo and navbar -->
@@ -20,9 +34,11 @@
     <h2>What article is about</h2>
   </div>
   <div>
-    <section class="big-news">
+    <section>
       <!-- The big news content -->
       <p>All the text about the news <a href="https://google.com">here</a></p>
+    </section>
+    <section class="grid-item">
       <img src="./Image1.png" alt="Picture of logo">
       <p>More text about the news</p>
       <a href="https://google.com">Read more here</a>
