more responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
   <a href="#">
     <p class="stora-nyheten-headline">
     Tomorrow We're the New YORK Times</p>
-    <p class="stora-nyheten-ingress">The Times are indeed changing!</p>
+    <p class="stora-nyheten-ingress">The Times are indeed changing! Find out how much in today's paper!</p>
   </a>
   
  </section>
@@ -65,7 +65,7 @@
     </a>
     
     </div>
-    
+
     <div class="grid-item other-news1">
       <img src="images news/versailles.jpg" alt="Versailles collonade" class="liten-bild">
       <a href=""><h3>Versailles: Building a King's cottage</h3>
