--- a/code/index.html
+++ b/code/index.html
@@ -27,9 +27,11 @@
   <img class="stora-nyheten-img" src="images news/old-american-map.jpg" alt="The Americas in the 1600s">
   
   <a href="#">
-    <p class="stora-nyheten-headline">
-    Tomorrow We're the New YORK Times</p>
-    <p class="stora-nyheten-ingress">The Times are indeed changing! Find out how much in today's paper!</p>
+    <p class="stora-nyheten-headline">Tomorrow We're the New YORK Times</p>
+    <p class="stora-nyheten-ingress">Quizzes on The Redcoats! </p>
+    <p class="stora-nyheten-ingress-forts">Farewell letters to the Dutch!</p>
+    <p class="stora-nyheten-ingress-forts2">And so much more!</p>
+ 
   </a>
   
  </section>
