worked on the desktop view and changed the first news articles direction

--- a/code/index.html
+++ b/code/index.html
@@ -32,10 +32,13 @@
       <div class="card first-news">
         <a href="link" class="card-link">
           <div class="card-body-first">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg">
+            <img class="card-image-first" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg">
             <div class="card-news-article">
               <h2 class="card-title">The Feline Fuzzball Effect: How Cats Enhance Our Well-Being</h2>
               <p class="card-description">In the hustle and bustle of our modern lives, there's one adorable companion that has quietly weaved its way into our hearts, bringing a delightful impact on our overall well-being – cats. Beyond their cute and curious demeanor, these furry friends offer a range of mental, emotional, and physical benefits that contribute to a healthier and happier life.</p>
+              <p class="card-article">
+                Simply spending time with a cat can have a calming effect on our nervous system. The rhythmic sound of a cat's purring has been found to lower stress levels, promoting relaxation and reducing anxiety. Gently stroking a cat's soft fur releases oxytocin, the "feel-good" hormone, which aids in soothing stress and fostering a sense of contentment...
+              </p>
             </div>
           </div>
         </a>
