--- a/code/index.html
+++ b/code/index.html
@@ -35,10 +35,8 @@
             <img class="card-image-first" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg">
             <div class="card-news-article">
               <h2 class="card-title">The Feline Fuzzball Effect: How Cats Enhance Our Well-Being</h2>
-              <p class="card-description">In the hustle and bustle of our modern lives, there's one adorable companion that has quietly weaved its way into our hearts, bringing a delightful impact on our overall well-being – cats. Beyond their cute and curious demeanor, these furry friends offer a range of mental, emotional, and physical benefits that contribute to a healthier and happier life.</p>
-              <p class="card-article">
-                Simply spending time with a cat can have a calming effect on our nervous system. The rhythmic sound of a cat's purring has been found to lower stress levels, promoting relaxation and reducing anxiety. Gently stroking a cat's soft fur releases oxytocin, the "feel-good" hormone, which aids in soothing stress and fostering a sense of contentment...
-              </p>
+              <p class="card-description">For centuries, felines have woven their way into the hearts of humans, captivating us with their grace and charm. As it turns out, the love we shower upon these adorable furballs goes far beyond simple affection — it comes with a treasure trove of scientifically proven benefits that can enrich our lives in surprising ways. So, if you've ever wondered why being a cat lover feels so darn good, let's take a closer look at the science-backed reasons behind this delightful bond...</p>
+          
             </div>
           </div>
         </a>
@@ -49,47 +47,47 @@
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388437782578/20230804_imageWebsiteCozy_ghibli.jpg">
             <h2 class="card-title">Enchanted Worlds: How Ghibli Movies Ignite the Flame of Imagination</h2>
-            <p class="card-description">Ghibli movies are not just animated tales; they are gateways to worlds of inspiration and wonder. Their timeless stories and beautifully crafted animations inspire us to dream big, cherish our connections, and embrace the magic of life.</p>
+            <p class="card-description">Ghibli movies are not just animated tales; they are gateways to worlds of inspiration and wonder. Their timeless stories and beautifully crafted animations inspire us to dream big, cherish our connections, and embrace the magic of life...</p>
         </div>
       </a>
       </div>
     
-      <div class="card">
+      <div class="card third-news">
         <a href="link" class="card-link">
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388882362448/20230804_imageWebsiteCozy_rain.jpg">
             <h2 class="card-title">Enjoyable Indoor Activities to Brighten Your Day</h2>
-            <p class="card-description">When raindrops tap on the windowpanes, it's a perfect opportunity to embrace the cozy ambiance indoors. So, grab a cup of hot cocoa, cozy up, and explore these indoor adventures that will make the rain feel like a blessing.</p>
+            <p class="card-description">When raindrops tap on the windowpanes, it's a perfect opportunity to embrace the cozy ambiance indoors. So, grab a cup of hot cocoa, cozy up, and explore these indoor adventures that will make the rain feel like a blessing...</p>
           </div>
         </a>
       </div>
 
-      <div class="card">
+      <div class="card fourth-news">
         <a href="link" class="card-link">
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387141738626/20230804_imageWebsiteCozy_boba.jpg">
             <h2 class="card-title">Bubble Tea Alchemy: 5  Bubble Tea Creations to Try Today</h2>
-            <p class="card-description">Ready to take your bubble tea journey to new heights? We've got just the ticket! Step aside from the usual bubble tea blends, and let's dive into a world of creativity with these five recipes that will redefine your sipping experience.</p>
+            <p class="card-description">Ready to take your bubble tea journey to new heights? We've got just the ticket! Step aside from the usual bubble tea blends, and let's dive into a world of creativity with these five recipes that will redefine your sipping experience...</p>
           </div>
         </a>
       </div>
 
-      <div class="card">
+      <div class="card fifth-news">
         <a href="link" class="card-link">
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387972210769/20230804_imageWebsiteCozy_games.jpg">
             <h2 class="card-title">Digital Escapes: 5 Video Games to Unwind and Recharge</h2>
-            <p class="card-description">Embark on adventures through these five video games. Explore picturesque landscapes, solve gentle puzzles, and immerse yourself in stories that touch the heart.</p>
+            <p class="card-description">Embark on adventures through these five video games. Explore picturesque landscapes, solve gentle puzzles, and immerse yourself in stories that touch the heart...</p>
           </div>
         </a>
       </div>
 
-      <div class="card">
+      <div class="card sixth-news">
         <a href="link" class="card-link">
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105389175976037/20230804_imageWebsiteCozy_yoga.jpg">
             <h2 class="card-title">Yoga: A Holistic Path to Enhance Well-Being</h2>
-            <p class="card-description">In the quest for a balanced and healthy life, yoga stands as a timeless practice that offers numerous benefits for mind, body, and soul. Let us delve into the world of yoga and explore the ways in which this ancient discipline can elevate your overall health and quality of life.</p>
+            <p class="card-description">In the quest for a balanced and healthy life, yoga stands as a timeless practice that offers numerous benefits for mind, body, and soul. Let us delve into the world of yoga and explore the ways in which this ancient discipline can elevate your overall health and quality of life...</p>
           </div>
         </a>
       </div>
