copy paste edits

--- a/code/index.html
+++ b/code/index.html
@@ -9,50 +9,88 @@
   <!-- dont forget the meta tag for responsiveness se vid hva er denne delen-->
   <!--obs sjekk media only i css.tilfeldig kode. hvordan bruker jeg det-->
 </head>
+<nav>
+  <a href="link to homepage">
+    <p class="logo">testing logo</p>
+  </a>
+
+  <!-- This is the menu for mobile test this  out, you need a code in css for the changes-->
+
+  <div class="hamburger-menu">
+    <span class="menu-line"></span>
+    <span class="menu-line"></span>
+    <span class="menu-line"></span>
+  </div>
+
+  <!-- This is the menu for tablet and desktop test this  out, you need a code in css for the changes. its all lines now-->
+
+  <div class="desktop-menu">
+    <a href="link to about page">about</a>
+    <a href="link to article page">article</a>
+    <a href="link to journal page">journal</a>
+    <!--make hoovers-->
+  </div>
+</nav>
 
 <body>
-  <header>
+  <div>
+
+    <section class="grid-parent">
+      <!--bytt farge på grid parent til slutt!-->
+
+      <div class="grid-item grid-one">HEADER TEST</div>
+      <div class="grid-item sidebar">test</div>
+      <div class="grid-item grid-two">2</div>
+      <div class="grid-item grid-three">3</div>
+      <div class="grid-item grid-four">4</div>
+      <div class="grid-item grid-five">5</div>
+      <div class="grid-item grid-six">6</div>
+      <div class="grid-item grid-seven">7</div>
+      <!--begynne med str før jeg legger mye inn-->
+    </section>
+
+    <header>
+      <h1>Navn</h1>
+    </header>
     <!-- Some kind of logo and navbar -->
-    <h1>Navn</h1>
-  </header>
 
-  <section class="flex-parent">
-    <div class="flex-child red">
-      <img src="./blomst.png" alt="">
-      <button>Click here</button></button>
-    </div>
-    <div class="flex-child blue">
-      <img src="./blomst2.png" alt="">
-      <button>Click here</button>
-    </div>
-  </section>
 
-  <div class="first-section-box">
-    <section class="big-news">
-      <p>en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del
-        tekst en del tekst en del tekst en del tekst</p>
-      <!-- The big news content -->
+
+    <section class="flex-parent">
+      <div class="flex-child red">
+        <img src="./blomst.png" alt="">
+        <button>Click here</button>
+      </div>
+
+      <div class="flex-child blue">
+        <img src="./blomst2.png" alt="">
+        <button>Click here</button>
+      </div>
     </section>
 
-    <section class="daily-news">
-      <p>en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del
-        tekst en del tekst en del tekst en del tekst
-      </p>
-      <!-- The other news  -->
-    </section>
+    <div class="first-section-box">
+
+      <section class="big-news">
+        <p>big news
+          en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en
+          del
+          tekst en del tekst en del tekst en del tekst</p>
+        <!-- The big news content -->
+      </section>
+
+      <section class="daily-news">
+        <p>daly news
+          en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en
+          del
+          tekst en del tekst en del tekst en del tekst
+        </p>
+        <!-- The other news  -->
+      </section>
+
+    </div>
+
   </div>
 </body>
 </div>
-<section class="grid-parent">
-  <div class="grid-item big-grid-item">☀️</div>
-  <div class="grid-item medium-grid-item">☀️</div>
-  <div class="grid-item medium-grid-item">☀️</div>
-  <div class="grid-item">☀️</div>
-  <div class="grid-item">☀️</div>
-  <div class="grid-item">☀️</div>
-  <div class="grid-item">☀️</div>
-  <div class="grid-item lonely-grid-item">☀️</div>
-</section>
-
 
 </html>
