made the rows in the grid the same size and updated the layout of the grid

--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,7 @@
       <div class="card second-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388437782578/20230804_imageWebsiteCozy_ghibli.jpg">
+            <img class="card-image-second" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388437782578/20230804_imageWebsiteCozy_ghibli.jpg">
             <h2 class="card-title">Enchanted Worlds: How Ghibli Movies Ignite the Flame of Imagination</h2>
             <p class="card-description">Ghibli movies are not just animated tales; they are gateways to worlds of inspiration and wonder. Their timeless stories and beautifully crafted animations inspire us to dream big, cherish our connections, and embrace the magic of life...</p>
         </div>
