--- a/code/index.html
+++ b/code/index.html
@@ -12,16 +12,19 @@
 <body>
   <div>
     <section class="grid-parent">
-      <div class="big-grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="lonely-grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
-      <div class="grid-item">☀️</div>
+
+      <div class="grid-item grid-a">a</div>
+      <div class="grid-item grid-b">b</div>
+      <div class="grid-item grid-c">c</div>
+      <div class="grid-item lonly">lonly</div>
+      <div class="grid-item grid-d">d</div>
+      <div class="grid-item grid-e">e</div>
+      <div class="grid-item grid-f">f</div>
+      <div class="grid-item grid-g">g</div>
+      <div class="grid-item grid-h">h</div>
+      <div class="grid-item grid-i">i</div>
+      <div class="grid-item grid-j">j</div>
+
     </section>
   </div>
   <div>
