more grid and logo

--- a/code/index.html
+++ b/code/index.html
@@ -11,8 +11,15 @@
 </head>
 <nav>
   <a href="link to homepage">
-    <p class="logo">testing logo</p>
+    <p class="logo">BEAUTY</p>
   </a>
+
+
+
+
+
+
+
 
   <!-- This is the menu for mobile test this  out, you need a code in css for the changes-->
 
@@ -36,16 +43,19 @@
   <div>
 
     <section class="grid-parent">
-      <!--bytt farge på grid parent til slutt!-->
 
       <div class="grid-item grid-one">HEADER TEST</div>
       <div class="grid-item sidebar">test</div>
       <div class="grid-item grid-two">2</div>
       <div class="grid-item grid-three">3</div>
-      <div class="grid-item grid-four">4</div>
+      <div class="grid-item grid-four">4
+        <p1>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
+          <p2>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
+      </div>
       <div class="grid-item grid-five">5</div>
       <div class="grid-item grid-six">6</div>
       <div class="grid-item grid-seven">7</div>
+      <div class="grid-item grid-eight">8</div>
       <!--begynne med str før jeg legger mye inn-->
     </section>
 
