--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header-website">
       <div class="header-logo-wrapper">
-        <img src="https://cdn.discordapp.com/attachments/1023954749499899956/1136939590310170684/icons8-circle-100.png" alt="logo news site">
+        <img src="https://cdn.discordapp.com/attachments/1023954749499899956/1137712839268765706/08.png" alt="logo news site">
         <h1>The Cozy Nook</h1>
       </div>
       
@@ -22,8 +22,8 @@
         <img class="header-hamburger" src="https://cdn.discordapp.com/attachments/797594258286051338/1136698868164198430/three-horizontal-lines-icon.png" alt="triple bars">
         <ul class="header-nav-list">  
           <li><a class="header-nav-link home" href="link1">Home</a></li>
-          <li><a class="header-nav-link about-us" href="link1">About us</a></li>
-          <li><a class="header-nav-link contact-us" href="link1">Contact us</a></li>
+          <li><a class="header-nav-link about-us" href="link1">About</a></li>
+          <li><a class="header-nav-link contact-us" href="link1">Contact</a></li>
         </ul>
       </div>
     </header>
@@ -56,8 +56,9 @@
         <a href="link" class="card-link">
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388882362448/20230804_imageWebsiteCozy_rain.jpg">
-            <h2 class="card-title">Enjoyable Indoor Activities to Brighten Your Day</h2>
-            <p class="card-description">When raindrops tap on the windowpanes, it's a perfect opportunity to embrace the cozy ambiance indoors. So, grab a cup of hot cocoa, cozy up, and explore these indoor adventures that will make the rain feel like a blessing...</p>
+            <h2 class="card-title">10 Cozy and Fun Activities to Embrace on a Rainy Day</h2>
+            <p class="card-description">When the skies open up and raindrops dance on your windowpane, it's the perfect excuse to create a warm and inviting haven indoors. Rainy days can be the ultimate opportunity to slow down, relax, and indulge in some cozy and fun activities. So, let's get ready to embrace the rain and make the most of these delightful moments with ten cozy and enjoyable ideas for your rainy day adventures...
+            </p>
           </div>
         </a>
       </div>
@@ -65,9 +66,9 @@
       <div class="card fourth-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387141738626/20230804_imageWebsiteCozy_boba.jpg">
-            <h2 class="card-title">Bubble Tea Alchemy: 5  Bubble Tea Creations to Try Today</h2>
-            <p class="card-description">Ready to take your bubble tea journey to new heights? We've got just the ticket! Step aside from the usual bubble tea blends, and let's dive into a world of creativity with these five recipes that will redefine your sipping experience...</p>
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105389175976037/20230804_imageWebsiteCozy_yoga.jpg">
+            <h2 class="card-title">Embrace Your Inner Protagonist: The Art of Romanticizing Everyday Life</h2>
+            <p class="card-description">In the grand narrative of life, each one of us holds the power to be the main character in our own unique story. But what does it mean to be the protagonist of your life and how can you infuse enchantment into everyday tasks? The secret lies in embracing the art of romanticizing your life — finding beauty and magic in the smallest of moments, and channeling your main-character energy to create a story that is truly your own...</p>
           </div>
         </a>
       </div>
@@ -76,8 +77,8 @@
         <a href="link" class="card-link">
           <div class="card-body">
             <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387972210769/20230804_imageWebsiteCozy_games.jpg">
-            <h2 class="card-title">Digital Escapes: 5 Video Games to Unwind and Recharge</h2>
-            <p class="card-description">Embark on adventures through these five video games. Explore picturesque landscapes, solve gentle puzzles, and immerse yourself in stories that touch the heart...</p>
+            <h2 class="card-title">Cozy Escapes: Enchanting Games to Immerse Yourself in Atmospheric Realms</h2>
+            <p class="card-description">In the midst of life's hustle and bustle, finding moments of serenity and relaxation is essential for our well-being. Enter cozy games, a delightful world of interactive experiences that offer not only entertainment but also provide an escape from the stresses of everyday life. Whether you're a seasoned gamer or new to the gaming scene, these 10 cozy games are your perfect companions for unwinding...</p>
           </div>
         </a>
       </div>
@@ -85,13 +86,22 @@
       <div class="card sixth-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105389175976037/20230804_imageWebsiteCozy_yoga.jpg">
-            <h2 class="card-title">Yoga: A Holistic Path to Enhance Well-Being</h2>
-            <p class="card-description">In the quest for a balanced and healthy life, yoga stands as a timeless practice that offers numerous benefits for mind, body, and soul. Let us delve into the world of yoga and explore the ways in which this ancient discipline can elevate your overall health and quality of life...</p>
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387141738626/20230804_imageWebsiteCozy_boba.jpg">
+            <h2 class="card-title">5  Bubble Tea Creations to Try Today</h2>
+            <p class="card-description">Ready to take your bubble tea journey to new heights? We've got just the ticket! Step aside from the usual bubble tea blends, and let's dive into a world of creativity with these five recipes that will redefine your sipping experience...</p>
           </div>
         </a>
       </div>
-    
+
+      <div class="card seventh-news">
+        <a href="link" class="card-link">
+          <div class="card-body">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/1023954749499899956/1137710838866772100/mikayla-mallek-3iT3dnmblGE-unsplash.jpg">
+            <h2 class="card-title">Crafting an Aesthetic Notion Setup: Organize and Inspire with Style</h2>
+            <p class="card-description">Notion, a versatile productivity tool, has garnered a massive following for its flexibility and customization options. From managing projects to organizing personal notes, it has become a go-to platform for individuals seeking a seamless digital workspace. But why settle for an ordinary setup when you can create an aesthetic Notion setup that sparks joy and creativity? Let's dive into the art of crafting a visually pleasing and inspiring Notion workspace that reflects your style and elevates your productivity...</p>
+          </div>
+        </a>
+      </div>
     </main>
     <footer>
       <p>Created by Veronica Åström 2023</p>
